gcc/testsuite/rust/rustc/ui/const-generics/min_const_generics/transmute-const-param-static-reference.rs
#![feature(min_const_generics)]

struct Const<const P: &'static ()>;
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {
    const A: &'static () = unsafe {
        std::mem::transmute(10 as *const ())
    };

    let _ = Const::<{A}>;
}

